# camviz

./: README.md  pyproject.toml
src/camviz/: __init__.py  cli.py  conventions.py  inspection.py  math3d.py  models.py  parsing.py  viewer.py
tests/: test_parsing.py  test_transforms.py  test_viewer.py
