[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "camviz"
version = "0.1.0"
description = "Inspect camera pose matrices against different world and camera coordinate conventions."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["viser>=1.0.0,<2.0.0"]

[project.scripts]
camviz = "camviz.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/camviz"]
